# llm-find-jobs

./: .env-copy  .gitignore  .pre-commit-config.yaml  Dockerfile_flask  Dockerfile_llm.txt  Dockerfile_train_classifier.txt  Dockerfile_worker  README.md  docker-compose.yaml  init-embedding.py  pyproject.toml
.github/workflows/: bandit.yaml
flask/: Dockerfile  Dockerfile_Worker  download_jobs.py  startup-dev.sh  worker_jobs.py
flask/flaskapp/: __init__.py
flask/flaskapp/templates/: add_new_job.html  base.html  create_persona.html  details.html  download_jobs.html  generate_search_terms.html  index.html  keyword_aligned_jobs.html  list_jobs.html  list_recent_jobs.html  llm_aligned_jobs.html  location_aligned_jobs.html  persona.html  post_job_search.html  results.html  run_job_search.html  tasks.html
searxng/: settings.yml
src/: job-classifier.py  job-process.py  job-search.py
static/css/: datatables.min.css
static/js/: datatables.min.js
